Added Contact Us page

--- a/aarhusWebDeveloperCoop/App_Data/umbraco.config
+++ b/aarhusWebDeveloperCoop/App_Data/umbraco.config
@@ -6,6 +6,8 @@
 <!ATTLIST articleItem id ID #REQUIRED>
 <!ELEMENT articlesMain ANY>
 <!ATTLIST articlesMain id ID #REQUIRED>
+<!ELEMENT contactPage ANY>
+<!ATTLIST contactPage id ID #REQUIRED>
 <!ELEMENT homePage ANY>
 <!ATTLIST homePage id ID #REQUIRED>
 <!ELEMENT master ANY>
@@ -273,5 +275,8 @@
     <sitemap id="1100" key="5d3be75b-4c95-47c1-a198-b58f0e7142d7" parentID="1067" level="2" creatorID="0" sortOrder="4" createDate="2016-02-26T18:30:46" updateDate="2016-02-26T18:30:46" nodeName="Sitemap" urlName="sitemap" path="-1,1067,1100" isDoc="" nodeType="1099" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1098" nodeTypeAlias="sitemap">
       <umbracoNaviHide>0</umbracoNaviHide>
     </sitemap>
+    <contactPage id="1106" key="832d719a-f723-4198-8381-c87d36bf80e8" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-03-04T11:34:47" updateDate="2016-03-04T11:34:47" nodeName="Contact Us" urlName="contact-us" path="-1,1067,1106" isDoc="" nodeType="1105" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1104" nodeTypeAlias="contactPage">
+      <umbracoNaviHide>0</umbracoNaviHide>
+    </contactPage>
   </homePage>
 </root>
