--- a/aarhusWebDeveloperCoop/aarhusWebDeveloperCoop.csproj
+++ b/aarhusWebDeveloperCoop/aarhusWebDeveloperCoop.csproj
@@ -3224,7 +3224,6 @@
     <Content Include="App_Data\Logs\UmbracoTraceLog.Riley.txt.2016-02-15" />
     <Content Include="App_Data\Logs\UmbracoTraceLog.Riley.txt.2016-02-18" />
     <Content Include="App_Data\Logs\UmbracoTraceLog.Riley.txt.2016-02-19" />
-    <Content Include="App_Data\Models\models.hash" />
     <Content Include="App_Data\NuGetBackup\20160226-101911\bin\aarhusWebDeveloperCoop.dll.config" />
     <Content Include="App_Data\NuGetBackup\20160226-101911\bin\roslyn\Microsoft.CSharp.Core.targets" />
     <Content Include="App_Data\NuGetBackup\20160226-101911\bin\roslyn\Microsoft.VisualBasic.Core.targets" />
@@ -3333,6 +3332,8 @@
     <Content Include="App_Data\TEMP\PluginCache\umbraco-plugins.RILEY.hash" />
     <Content Include="App_Data\TEMP\PluginCache\umbraco-plugins.RILEY.list" />
     <Content Include="App_Data\umbraco.config" />
+    <Content Include="Views\ContactPage.cshtml" />
+    <Content Include="Views\MacroPartials\ContactForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3365,22 +3366,24 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Data\Models\all.generated.cs" />
-    <Compile Include="App_Data\Models\models.generated.cs" />
+    <Compile Include="Controllers\ContactFormSurfaceController.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ContactForm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\Models\" />
     <Folder Include="App_Data\NuGetBackup\20160226-102757\Umbraco\" />
     <Folder Include="App_Data\NuGetBackup\20160226-102757\Umbraco_Client\" />
     <Folder Include="App_Data\TEMP\FileUploads\" />
     <Folder Include="App_Data\TEMP\Install\" />
+    <Folder Include="Views\ContactFormSurface\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
