--- a/aarhusWebDeveloperCoop/aarhusWebDeveloperCoop.csproj
+++ b/aarhusWebDeveloperCoop/aarhusWebDeveloperCoop.csproj
@@ -602,6 +602,11 @@
     <Content Include="media\1005\tree-logo-xtra-small.png" />
     <Content Include="packages.config" />
     <Content Include="App_Plugins\ModelsBuilder\package.manifest" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Umbraco\Actions\delete.aspx" />
     <Content Include="Umbraco\Actions\editContent.aspx" />
     <Content Include="Umbraco\Actions\preview.aspx" />
