Added a Message document type which adds the messages sent by end-users to the list of messages in the backoffice.

--- a/aarhusWebDeveloperCoop/App_Data/umbraco.config
+++ b/aarhusWebDeveloperCoop/App_Data/umbraco.config
@@ -20,6 +20,8 @@
 <!ATTLIST sitemap id ID #REQUIRED>
 <!ELEMENT textPage ANY>
 <!ATTLIST textPage id ID #REQUIRED>
+<!ELEMENT userMessage ANY>
+<!ATTLIST userMessage id ID #REQUIRED>
 
 ]>
 <root id="-1">
@@ -277,6 +279,12 @@
     </sitemap>
     <contactPage id="1106" key="832d719a-f723-4198-8381-c87d36bf80e8" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-03-04T11:34:47" updateDate="2016-03-04T11:34:47" nodeName="Contact Us" urlName="contact-us" path="-1,1067,1106" isDoc="" nodeType="1105" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1104" nodeTypeAlias="contactPage">
       <umbracoNaviHide>0</umbracoNaviHide>
+      <userMessage id="1119" key="3fd16b98-49f8-47fb-a6e0-6188ed9f0eed" parentID="1106" level="3" creatorID="0" sortOrder="1" createDate="2016-03-05T13:40:25" updateDate="2016-03-05T13:40:25" nodeName="Testing with publishing" urlName="testing-with-publishing" path="-1,1067,1106,1119" isDoc="" nodeType="1117" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1116" nodeTypeAlias="userMessage">
+        <message><![CDATA[I wonder what's going to happen once this gets published. Where does it get published? Heh]]></message>
+        <subject><![CDATA[Testing with publishing]]></subject>
+        <yourName><![CDATA[Marina]]></yourName>
+        <email><![CDATA[ghergheliviamarina@yahoo.com]]></email>
+      </userMessage>
     </contactPage>
   </homePage>
 </root>
