managed to display members

--- a/aarhusWebDeveloperCoop/App_Data/umbraco.config
+++ b/aarhusWebDeveloperCoop/App_Data/umbraco.config
@@ -16,6 +16,8 @@
 <!ATTLIST login id ID #REQUIRED>
 <!ELEMENT master ANY>
 <!ATTLIST master id ID #REQUIRED>
+<!ELEMENT members ANY>
+<!ATTLIST members id ID #REQUIRED>
 <!ELEMENT projectItem ANY>
 <!ATTLIST projectItem id ID #REQUIRED>
 <!ELEMENT projectsMain ANY>
@@ -296,5 +298,8 @@
     <forbiddenAccess id="1140" key="03f6fe3c-0758-403c-911c-03ec4a9fdd51" parentID="1067" level="2" creatorID="0" sortOrder="7" createDate="2016-03-09T19:25:01" updateDate="2016-03-09T19:26:05" nodeName="Forbidden Access" urlName="forbidden-access" path="-1,1067,1140" isDoc="" nodeType="1139" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1138" nodeTypeAlias="forbiddenAccess">
       <umbracoNaviHide>1</umbracoNaviHide>
     </forbiddenAccess>
+    <members id="1144" key="f88c172d-6737-4745-9e7b-8194c75582e5" parentID="1067" level="2" creatorID="0" sortOrder="8" createDate="2016-03-10T18:15:54" updateDate="2016-03-10T18:15:54" nodeName="Members" urlName="members" path="-1,1067,1144" isDoc="" nodeType="1143" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1142" nodeTypeAlias="members">
+      <umbracoNaviHide>0</umbracoNaviHide>
+    </members>
   </homePage>
 </root>
