added more bootstrap. also the login button turns into logout if you're logged in

--- a/aarhusWebDeveloperCoop/App_Data/umbraco.config
+++ b/aarhusWebDeveloperCoop/App_Data/umbraco.config
@@ -37,7 +37,7 @@
     <logo>1066</logo>
     <siteTitle><![CDATA[Aarhus Web Developer Coop]]></siteTitle>
     <mainContent><![CDATA[<p>Welcome to Aarhus Web Developer Co-op! Here we're going to try to grow as a community by collaborating on projects!</p>]]></mainContent>
-    <projectsMain id="1073" key="b9376c9b-8a3e-461e-852c-f9310bfd126d" parentID="1067" level="2" creatorID="0" sortOrder="0" createDate="2016-02-15T15:19:13" updateDate="2016-03-18T09:05:26" nodeName="Projects" urlName="projects" path="-1,1067,1073" isDoc="" nodeType="1059" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1058" nodeTypeAlias="projectsMain">
+    <projectsMain id="1073" key="b9376c9b-8a3e-461e-852c-f9310bfd126d" parentID="1067" level="2" creatorID="0" sortOrder="0" createDate="2016-02-15T15:19:13" updateDate="2016-03-18T12:38:08" nodeName="Projects" urlName="projects" path="-1,1067,1073" isDoc="" nodeType="1059" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1058" nodeTypeAlias="projectsMain">
       <footer><![CDATA[©2016 Business Academy Aarhus]]></footer>
       <umbracoNaviHide>0</umbracoNaviHide>
       <projectsTitle><![CDATA[Projects]]></projectsTitle>
@@ -137,7 +137,22 @@
         <articleContent><![CDATA[<p>This weekend, you can join other students from IT educations to design and code awesome stuff, by using your imagination!</p>]]></articleContent>
       </articleItem>
     </articlesMain>
-    <aboutUs id="1089" key="8dcb6503-3e11-42f2-ac86-2ea50ee292f7" parentID="1067" level="2" creatorID="0" sortOrder="2" createDate="2016-02-26T13:53:03" updateDate="2016-03-18T09:04:38" nodeName="About Us" urlName="about-us" path="-1,1067,1089" isDoc="" nodeType="1079" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1084" nodeTypeAlias="aboutUs">
+    <members id="1144" key="f88c172d-6737-4745-9e7b-8194c75582e5" parentID="1067" level="2" creatorID="0" sortOrder="2" createDate="2016-03-10T18:15:54" updateDate="2016-03-18T12:50:08" nodeName="Members" urlName="members" path="-1,1067,1144" isDoc="" nodeType="1143" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1142" nodeTypeAlias="members">
+      <umbracoNaviHide>0</umbracoNaviHide>
+    </members>
+    <forbiddenAccess id="1140" key="03f6fe3c-0758-403c-911c-03ec4a9fdd51" parentID="1067" level="2" creatorID="0" sortOrder="3" createDate="2016-03-09T19:25:01" updateDate="2016-03-18T12:50:08" nodeName="Forbidden Access" urlName="forbidden-access" path="-1,1067,1140" isDoc="" nodeType="1139" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1138" nodeTypeAlias="forbiddenAccess">
+      <umbracoNaviHide>1</umbracoNaviHide>
+    </forbiddenAccess>
+    <contactPage id="1106" key="832d719a-f723-4198-8381-c87d36bf80e8" parentID="1067" level="2" creatorID="0" sortOrder="4" createDate="2016-03-04T11:34:47" updateDate="2016-03-18T09:04:38" nodeName="Contact Us" urlName="contact-us" path="-1,1067,1106" isDoc="" nodeType="1105" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1104" nodeTypeAlias="contactPage">
+      <umbracoNaviHide>0</umbracoNaviHide>
+      <userMessage id="1119" key="3fd16b98-49f8-47fb-a6e0-6188ed9f0eed" parentID="1106" level="3" creatorID="0" sortOrder="1" createDate="2016-03-05T13:40:25" updateDate="2016-03-05T13:40:25" nodeName="Testing with publishing" urlName="testing-with-publishing" path="-1,1067,1106,1119" isDoc="" nodeType="1117" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1116" nodeTypeAlias="userMessage">
+        <message><![CDATA[I wonder what's going to happen once this gets published. Where does it get published? Heh]]></message>
+        <subject><![CDATA[Testing with publishing]]></subject>
+        <yourName><![CDATA[Marina]]></yourName>
+        <email><![CDATA[ghergheliviamarina@yahoo.com]]></email>
+      </userMessage>
+    </contactPage>
+    <aboutUs id="1089" key="8dcb6503-3e11-42f2-ac86-2ea50ee292f7" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-02-26T13:53:03" updateDate="2016-03-18T13:26:57" nodeName="About Us" urlName="about-us" path="-1,1067,1089" isDoc="" nodeType="1079" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1084" nodeTypeAlias="aboutUs">
       <umbracoNaviHide>0</umbracoNaviHide>
       <aboutUsGrid><![CDATA[{
   "name": "1 column layout",
@@ -206,7 +221,8 @@
                       "top": 0.5
                     },
                     "id": 1082,
-                    "image": "/media/1004/project-management600px.jpg"
+                    "image": "/media/1004/project-management600px.jpg",
+                    "caption": ""
                   },
                   "editor": {
                     "alias": "media"
@@ -236,22 +252,66 @@
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "<p>We're a team of developers who wish for other developers at our academy to be more productive.</p>",
+                  "value": "Our Company",
+                  "editor": {
+                    "alias": "headline"
+                  },
+                  "active": false
+                },
+                {
+                  "value": "<p>We're a team of developers who wish for other developers in Aarhus to be more productive.</p>\n<p>We've noticed that developers in North America are taking all the credit for developing stuff while the rest of the world is considered silent. We want to change that.</p>\n<p> </p>",
                   "editor": {
                     "alias": "rte"
                   },
                   "active": false
+                },
+                {
+                  "value": {
+                    "focalPoint": {
+                      "left": 0.5,
+                      "top": 0.5
+                    },
+                    "id": 1151,
+                    "image": "/media/1013/our-team-small.jpg"
+                  },
+                  "editor": {
+                    "alias": "media"
+                  },
+                  "active": true
                 }
-              ]
+              ],
+              "hasActiveChild": true,
+              "active": true
             },
             {
               "grid": 4,
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "<p>We're providing you with the opportunity to find projects that interest you and get involved!</p>",
+                  "value": "What Do We Do?",
+                  "editor": {
+                    "alias": "headline"
+                  },
+                  "active": false
+                },
+                {
+                  "value": "<p>We're providing you with the opportunity to find projects that interest you and get involved!</p>\n<p>Feel free to browse through our projects, be they already in development, or just at the stage where people are still brainstorming the idea.</p>",
                   "editor": {
                     "alias": "rte"
+                  },
+                  "active": false
+                },
+                {
+                  "value": {
+                    "focalPoint": {
+                      "left": 0.5,
+                      "top": 0.5
+                    },
+                    "id": 1150,
+                    "image": "/media/1012/project-small.jpg"
+                  },
+                  "editor": {
+                    "alias": "media"
                   },
                   "active": false
                 }
@@ -263,9 +323,30 @@
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "<p>The best part is that you get to collaborate with other students to do awesome stuff.</p>",
+                  "value": "What Do You Get?",
+                  "editor": {
+                    "alias": "headline"
+                  },
+                  "active": false
+                },
+                {
+                  "value": "<p>The best part is that you get to collaborate with other students to do awesome stuff.</p>\n<p>Be they mobile apps or websites, you can just join the fun in developing them. You just have to want to show up and communicate with everybody so that everything is going to go smoothly!</p>",
                   "editor": {
                     "alias": "rte"
+                  },
+                  "active": false
+                },
+                {
+                  "value": {
+                    "focalPoint": {
+                      "left": 0.5,
+                      "top": 0.5
+                    },
+                    "id": 1148,
+                    "image": "/media/1010/team-small2.jpg"
+                  },
+                  "editor": {
+                    "alias": "media"
                   },
                   "active": false
                 }
@@ -273,31 +354,18 @@
             }
           ],
           "hasConfig": false,
-          "id": "c99641bd-ad79-03af-9eeb-e0d041e189b9"
+          "id": "c99641bd-ad79-03af-9eeb-e0d041e189b9",
+          "hasActiveChild": true,
+          "active": true
         }
       ]
     }
   ]
 }]]></aboutUsGrid>
     </aboutUs>
-    <sitemap id="1100" key="5d3be75b-4c95-47c1-a198-b58f0e7142d7" parentID="1067" level="2" creatorID="0" sortOrder="3" createDate="2016-02-26T18:30:46" updateDate="2016-03-18T09:04:38" nodeName="Sitemap" urlName="sitemap" path="-1,1067,1100" isDoc="" nodeType="1099" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1098" nodeTypeAlias="sitemap">
+    <sitemap id="1100" key="5d3be75b-4c95-47c1-a198-b58f0e7142d7" parentID="1067" level="2" creatorID="0" sortOrder="6" createDate="2016-02-26T18:30:46" updateDate="2016-03-18T12:50:08" nodeName="Sitemap" urlName="sitemap" path="-1,1067,1100" isDoc="" nodeType="1099" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1098" nodeTypeAlias="sitemap">
       <umbracoNaviHide>0</umbracoNaviHide>
     </sitemap>
-    <contactPage id="1106" key="832d719a-f723-4198-8381-c87d36bf80e8" parentID="1067" level="2" creatorID="0" sortOrder="4" createDate="2016-03-04T11:34:47" updateDate="2016-03-18T09:04:38" nodeName="Contact Us" urlName="contact-us" path="-1,1067,1106" isDoc="" nodeType="1105" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1104" nodeTypeAlias="contactPage">
-      <umbracoNaviHide>0</umbracoNaviHide>
-      <userMessage id="1119" key="3fd16b98-49f8-47fb-a6e0-6188ed9f0eed" parentID="1106" level="3" creatorID="0" sortOrder="1" createDate="2016-03-05T13:40:25" updateDate="2016-03-05T13:40:25" nodeName="Testing with publishing" urlName="testing-with-publishing" path="-1,1067,1106,1119" isDoc="" nodeType="1117" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1116" nodeTypeAlias="userMessage">
-        <message><![CDATA[I wonder what's going to happen once this gets published. Where does it get published? Heh]]></message>
-        <subject><![CDATA[Testing with publishing]]></subject>
-        <yourName><![CDATA[Marina]]></yourName>
-        <email><![CDATA[ghergheliviamarina@yahoo.com]]></email>
-      </userMessage>
-    </contactPage>
-    <forbiddenAccess id="1140" key="03f6fe3c-0758-403c-911c-03ec4a9fdd51" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-03-09T19:25:01" updateDate="2016-03-18T09:04:38" nodeName="Forbidden Access" urlName="forbidden-access" path="-1,1067,1140" isDoc="" nodeType="1139" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1138" nodeTypeAlias="forbiddenAccess">
-      <umbracoNaviHide>1</umbracoNaviHide>
-    </forbiddenAccess>
-    <members id="1144" key="f88c172d-6737-4745-9e7b-8194c75582e5" parentID="1067" level="2" creatorID="0" sortOrder="6" createDate="2016-03-10T18:15:54" updateDate="2016-03-18T09:04:38" nodeName="Members" urlName="members" path="-1,1067,1144" isDoc="" nodeType="1143" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1142" nodeTypeAlias="members">
-      <umbracoNaviHide>0</umbracoNaviHide>
-    </members>
     <login id="1137" key="ca3b7c1f-0f2c-4d68-addb-d7b28be31117" parentID="1067" level="2" creatorID="0" sortOrder="7" createDate="2016-03-09T19:05:14" updateDate="2016-03-18T09:04:38" nodeName="Login" urlName="login" path="-1,1067,1137" isDoc="" nodeType="1136" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1135" nodeTypeAlias="login">
       <umbracoNaviHide>0</umbracoNaviHide>
     </login>
