auto-indented the views' code

--- a/aarhusWebDeveloperCoop/App_Data/umbraco.config
+++ b/aarhusWebDeveloperCoop/App_Data/umbraco.config
@@ -192,7 +192,7 @@
         <email><![CDATA[ghergheliviamarina@yahoo.com]]></email>
       </userMessage>
     </contactPage>
-    <aboutUs id="1089" key="8dcb6503-3e11-42f2-ac86-2ea50ee292f7" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-02-26T13:53:03" updateDate="2016-03-18T13:26:57" nodeName="About Us" urlName="about-us" path="-1,1067,1089" isDoc="" nodeType="1079" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1084" nodeTypeAlias="aboutUs">
+    <aboutUs id="1089" key="8dcb6503-3e11-42f2-ac86-2ea50ee292f7" parentID="1067" level="2" creatorID="0" sortOrder="5" createDate="2016-02-26T13:53:03" updateDate="2016-03-24T13:32:50" nodeName="About Us" urlName="about-us" path="-1,1067,1089" isDoc="" nodeType="1079" creatorName="Marina Gherghe" writerName="Marina Gherghe" writerID="0" template="1084" nodeTypeAlias="aboutUs">
       <umbracoNaviHide>0</umbracoNaviHide>
       <aboutUsGrid><![CDATA[{
   "name": "1 column layout",
@@ -292,7 +292,7 @@
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "Our Company",
+                  "value": "People",
                   "editor": {
                     "alias": "headline"
                   },
@@ -317,18 +317,17 @@
                   "editor": {
                     "alias": "media"
                   },
-                  "active": true
+                  "active": false
                 }
               ],
-              "hasActiveChild": true,
-              "active": true
+              "active": false
             },
             {
               "grid": 4,
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "What Do We Do?",
+                  "value": "Vision",
                   "editor": {
                     "alias": "headline"
                   },
@@ -355,7 +354,8 @@
                   },
                   "active": false
                 }
-              ]
+              ],
+              "active": false
             },
             {
               "grid": 4,
@@ -363,7 +363,7 @@
               "hasConfig": false,
               "controls": [
                 {
-                  "value": "What Do You Get?",
+                  "value": "Skills",
                   "editor": {
                     "alias": "headline"
                   },
@@ -390,13 +390,13 @@
                   },
                   "active": false
                 }
-              ]
+              ],
+              "active": false
             }
           ],
           "hasConfig": false,
           "id": "c99641bd-ad79-03af-9eeb-e0d041e189b9",
-          "hasActiveChild": true,
-          "active": true
+          "active": false
         }
       ]
     }
